# ai_domain_agent

./: .gitignore  README.md  pyproject.toml
output/: domain_recommendations.md
src/ai_domain_agent/: crew.py  main.py
src/ai_domain_agent/config/: agents.yaml  tasks.yaml
src/ai_domain_agent/tools/: custom_tool.py
